--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "node dist/index.js",
+    "start": "node -r dotenv/config dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -98,7 +98,7 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.1",
     "esbuild": "^0.25.4",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
